81: Fix header background on mobile

--- a/resources/assets/sass/blog.scss
+++ b/resources/assets/sass/blog.scss
@@ -112,10 +112,12 @@ h6 {
       display: block;
       background: url("/images/home_hero.jpeg");
       background-size: cover;
-      background-attachment: fixed;
-
       height: 100%;
       width: 100%;
+
+      @media screen and (min-width: $desktop-small) {
+        background-attachment: fixed;
+      }
     }
 
     .hero-content {
